# cookiecutter-python-template

./: .python-version  CHANGELOG.md  README.md  SECURITY.md  cookiecutter.json  cookiecutter_spec.py  requirements.txt  tasks.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .flake8  .pre-commit-config.yaml  Makefile  README.dev.md  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.app_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/: __init__.py
